Fix up spacing for ordered lists

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4204,7 +4204,8 @@ body {
 .textwidget ul,
 .textwidget ol {
   margin-bottom: 30px;
-  list-style-position: inside;
+  list-style-position: outside;
+  padding-left: 30px;
 }
 /* line 5704, styles.scss */
 .space-content ul ul,
@@ -4218,6 +4219,10 @@ body {
   padding-left: 30px;
   margin-bottom: 0;
 }
+.space-content ol {
+  list-style-type: decimal;
+}
+
 /* line 5714, styles.scss */
 .space-content strong,
 .space-content big,
